<resources>
    <string name="app_name">OrganizeMe</string>
    <string name="intro_screen_image_contentDescription">image of a guy</string>
    <string name="lets_get_started_text">Let\'s Get Started!</string>
    <string name="intro_text_description">Organize and manage your tasks easily!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="sign_up_description_text">Enter your name, email and password</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Please enter your email and password to sign in</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">Create</string>
    <string name="board_name">Board name</string>
    <string name="no_boards_available">No boards available!</string>
    <string name="created_by">Created by:</string>
    <string name="nav_my_boards">My Boards</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="search_member">Search Member</string>

    <string name="card_details">Card Details</string>
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>

    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>

    <string name="nav_home">Home</string>
    <string name="board_created_by">Created by %1$s</string>
    <string name="create_board_tip">To create a board press the button below</string>

    <string name="please_wait">Please wait</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="please_provide_a_board_name">Please provide a board name</string>
    <string name="please_provide_a_card_name">Please provide a card name</string>
    <string name="please_provide_list_name">Please provide list name</string>
    <string name="please_provide_email">Please provide members\' email address</string>
    <string name="please_provide_phone_num">Please provide a phone number</string>
    <string name="please_provide_password">Please provide a password</string>
    <string name="please_provide_your_name">Please provide your name</string>

    <string name="permission_denied">Permission denied. You can change it in settings</string>
    <string name="email_hint">Email must contain \'@\' sign</string>
    <string name="password_min_characters">Please enter a password of min 6 characters</string>
    <string name="registration_failed">Registration failed</string>
    <string name="registration_successful">You have successfully registered!</string>

</resources>