<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_my_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MyProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_my_profile_activity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_background"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/my_profile_screen_content_margintStartEnd"
                android:layout_marginEnd="@dimen/my_profile_screen_content_margintStartEnd"
                android:layout_marginTop="@dimen/my_profile_screen_content_margintTopBottom"
                android:layout_marginBottom="@dimen/my_profile_screen_content_margintTopBottom"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/my_profile_screen_content_padding"
                    >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_user_image"
                        android:layout_width="@dimen/board_image_size"
                        android:layout_height="@dimen/board_image_size"
                        android:contentDescription="@string/intro_screen_image_contentDescription"
                        android:src="@drawable/ic_user_place_holder"
                        app:civ_border_color="@color/primary_text_color"
                        app:civ_border_width="@dimen/item_board_image_circular_border_width"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_name_til_marginTop"
                        app:boxBackgroundColor="@android:color/transparent"
                        android:background="@android:color/transparent"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name_my_profile_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:textSize="@dimen/et_text_size"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_name_til_marginTop"
                        app:boxBackgroundColor="@android:color/transparent"
                        android:background="@android:color/transparent"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email_my_profile_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/et_text_size"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_name_til_marginTop"
                        app:boxBackgroundColor="@android:color/transparent"
                        android:background="@android:color/transparent"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_mobile_my_profile_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile"
                            android:inputType="phone"
                            android:textSize="@dimen/et_text_size"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_update_my_profile_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                        android:background="@drawable/shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="@dimen/btn_paddingTopBottom"
                        android:paddingBottom="@dimen/btn_paddingTopBottom"
                        android:text="@string/update"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btn_text_size"
                        />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>