<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MyProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_board_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_profile_screen_content_margintStartEnd"
            android:layout_marginEnd="@dimen/my_profile_screen_content_margintStartEnd"
            android:layout_marginTop="@dimen/my_profile_screen_content_margintTopBottom"
            android:layout_marginBottom="@dimen/my_profile_screen_content_margintTopBottom"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/my_profile_screen_content_padding"
                >

                <ImageView
                    android:id="@+id/iv_board_image_create_board_activity"
                    android:layout_width="@dimen/board_image_size"
                    android:layout_height="@dimen/board_image_size"
                    android:contentDescription="@string/intro_screen_image_contentDescription"
                    android:src="@drawable/ic_board_place_holder"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_til_marginTop"
                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name_my_profile_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/board_name"
                        android:textSize="@dimen/et_text_size"
                        />

                </com.google.android.material.textfield.TextInputLayout>



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_create_create_board_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/create_board_btn_marginTop"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>